feat: add animation on title & add more rounded response

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.squircle {
+  border-radius: 18px;
+  corner-shape: superellipse(1.1);
+}
